// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content item Default renders correctly 1`] = `
<jest>
  <article
    class="ecl-content-item"
  >
    <div
      class="ecl-content-block ecl-content-item__content-block"
      data-ecl-auto-init="ContentBlock"
      data-ecl-content-block=""
    >
      <ul
        aria-label="Labels"
        class="ecl-content-block__label-container"
      >
        <li
          class="ecl-content-block__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight"
          >
            highlight
          </span>
        </li>
        <li
          class="ecl-content-block__label-item"
        >
          <span
            class="ecl-label ecl-label--high"
          >
            high importance
          </span>
        </li>
      </ul>
      <ul
        class="ecl-content-block__primary-meta-container"
      >
        <li
          class="ecl-content-block__primary-meta-item"
        >
          PRIMARY META
        </li>
        <li
          class="ecl-content-block__primary-meta-item"
        >
          DD Month Year
        </li>
      </ul>
      <div
        class="ecl-content-block__title"
        data-ecl-title-link=""
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Title
        </a>
      </div>
      <div
        class="ecl-content-block__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
      </div>
      <ul
        class="ecl-content-block__secondary-meta-container"
      >
        <li
          class="ecl-content-block__secondary-meta-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-content-block__secondary-meta-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-content-block__secondary-meta-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-content-block__secondary-meta-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-content-block__secondary-meta-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-content-block__secondary-meta-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <div
        class="ecl-content-block__list-container"
      >
        <dl
          class="ecl-description-list ecl-content-block__list"
        >
          <dt
            class="ecl-description-list__term"
          >
            Standard text
          </dt>
          <dd
            class="ecl-description-list__definition"
          >
            Lorem ipsum dolor sit amet, 
            <a
              class="ecl-link"
              href="/example"
            >
              consectetur adipiscing elit
            </a>
            . Suspendisse ut sapien condimentum, aliquet turpis sit amet, finibus purus. Donec porttitor iaculis felis ut dapibus. Sed blandit, massa ac suscipit facilisis
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Standalone links
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--link"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--s ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#copy"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Lorem ipsum dolor sit amet
                  </span>
                </a>
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--s ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#download"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Lorem ipsum dolor sit amet
                  </span>
                </a>
              </li>
            </ul>
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Links inline
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--inline"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone"
                  href="/example"
                >
                  Lorem ipsum dolor sit amet
                </a>
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone"
                  href="/example"
                >
                  Lorem ipsum dolor sit amet
                </a>
              </li>
            </ul>
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Taxonomy list
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--taxonomy"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 1
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 2
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 3
              </li>
            </ul>
          </dd>
        </dl>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Content item Default renders correctly with extra attributes 1`] = `
<jest>
  <article
    class="ecl-content-item"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-content-block ecl-content-item__content-block"
      data-ecl-auto-init="ContentBlock"
      data-ecl-content-block=""
    >
      <ul
        aria-label="Labels"
        class="ecl-content-block__label-container"
      >
        <li
          class="ecl-content-block__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight"
          >
            highlight
          </span>
        </li>
        <li
          class="ecl-content-block__label-item"
        >
          <span
            class="ecl-label ecl-label--high"
          >
            high importance
          </span>
        </li>
      </ul>
      <ul
        class="ecl-content-block__primary-meta-container"
      >
        <li
          class="ecl-content-block__primary-meta-item"
        >
          PRIMARY META
        </li>
        <li
          class="ecl-content-block__primary-meta-item"
        >
          DD Month Year
        </li>
      </ul>
      <div
        class="ecl-content-block__title"
        data-ecl-title-link=""
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Title
        </a>
      </div>
      <div
        class="ecl-content-block__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
      </div>
      <ul
        class="ecl-content-block__secondary-meta-container"
      >
        <li
          class="ecl-content-block__secondary-meta-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-content-block__secondary-meta-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-content-block__secondary-meta-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-content-block__secondary-meta-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-content-block__secondary-meta-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-content-block__secondary-meta-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <div
        class="ecl-content-block__list-container"
      >
        <dl
          class="ecl-description-list ecl-content-block__list"
        >
          <dt
            class="ecl-description-list__term"
          >
            Standard text
          </dt>
          <dd
            class="ecl-description-list__definition"
          >
            Lorem ipsum dolor sit amet, 
            <a
              class="ecl-link"
              href="/example"
            >
              consectetur adipiscing elit
            </a>
            . Suspendisse ut sapien condimentum, aliquet turpis sit amet, finibus purus. Donec porttitor iaculis felis ut dapibus. Sed blandit, massa ac suscipit facilisis
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Standalone links
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--link"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--s ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#copy"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Lorem ipsum dolor sit amet
                  </span>
                </a>
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--s ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#download"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Lorem ipsum dolor sit amet
                  </span>
                </a>
              </li>
            </ul>
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Links inline
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--inline"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone"
                  href="/example"
                >
                  Lorem ipsum dolor sit amet
                </a>
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone"
                  href="/example"
                >
                  Lorem ipsum dolor sit amet
                </a>
              </li>
            </ul>
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Taxonomy list
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--taxonomy"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 1
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 2
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 3
              </li>
            </ul>
          </dd>
        </dl>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Content item Default renders correctly with extra class names 1`] = `
<jest>
  <article
    class="ecl-content-item custom-class custom-class--test"
  >
    <div
      class="ecl-content-block ecl-content-item__content-block"
      data-ecl-auto-init="ContentBlock"
      data-ecl-content-block=""
    >
      <ul
        aria-label="Labels"
        class="ecl-content-block__label-container"
      >
        <li
          class="ecl-content-block__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight"
          >
            highlight
          </span>
        </li>
        <li
          class="ecl-content-block__label-item"
        >
          <span
            class="ecl-label ecl-label--high"
          >
            high importance
          </span>
        </li>
      </ul>
      <ul
        class="ecl-content-block__primary-meta-container"
      >
        <li
          class="ecl-content-block__primary-meta-item"
        >
          PRIMARY META
        </li>
        <li
          class="ecl-content-block__primary-meta-item"
        >
          DD Month Year
        </li>
      </ul>
      <div
        class="ecl-content-block__title"
        data-ecl-title-link=""
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Title
        </a>
      </div>
      <div
        class="ecl-content-block__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
      </div>
      <ul
        class="ecl-content-block__secondary-meta-container"
      >
        <li
          class="ecl-content-block__secondary-meta-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-content-block__secondary-meta-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-content-block__secondary-meta-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-content-block__secondary-meta-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-content-block__secondary-meta-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-content-block__secondary-meta-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <div
        class="ecl-content-block__list-container"
      >
        <dl
          class="ecl-description-list ecl-content-block__list"
        >
          <dt
            class="ecl-description-list__term"
          >
            Standard text
          </dt>
          <dd
            class="ecl-description-list__definition"
          >
            Lorem ipsum dolor sit amet, 
            <a
              class="ecl-link"
              href="/example"
            >
              consectetur adipiscing elit
            </a>
            . Suspendisse ut sapien condimentum, aliquet turpis sit amet, finibus purus. Donec porttitor iaculis felis ut dapibus. Sed blandit, massa ac suscipit facilisis
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Standalone links
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--link"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--s ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#copy"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Lorem ipsum dolor sit amet
                  </span>
                </a>
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--s ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#download"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Lorem ipsum dolor sit amet
                  </span>
                </a>
              </li>
            </ul>
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Links inline
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--inline"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone"
                  href="/example"
                >
                  Lorem ipsum dolor sit amet
                </a>
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone"
                  href="/example"
                >
                  Lorem ipsum dolor sit amet
                </a>
              </li>
            </ul>
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Taxonomy list
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--taxonomy"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 1
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 2
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 3
              </li>
            </ul>
          </dd>
        </dl>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Content item Event renders correctly 1`] = `
<jest>
  <article
    class="ecl-content-item ecl-content-item--inline"
  >
    <time
      class="ecl-date-block ecl-date-block--ongoing ecl-content-item__date"
      datetime="2019-09-26"
    >
      <span
        class="ecl-date-block__daytime"
      >
        2019-09-26
      </span>
      <span
        aria-hidden="true"
        class="ecl-date-block__day"
      >
        26
      </span>
      <abbr
        aria-hidden="true"
        class="ecl-date-block__month"
        title="September"
      >
        Sep
      </abbr>
      <span
        aria-hidden="true"
        class="ecl-date-block__year"
      >
        2019
      </span>
    </time>
    <div
      class="ecl-content-block ecl-content-item__content-block"
      data-ecl-auto-init="ContentBlock"
      data-ecl-content-block=""
    >
      <ul
        aria-label="Labels"
        class="ecl-content-block__label-container"
      >
        <li
          class="ecl-content-block__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight"
          >
            highlight
          </span>
        </li>
        <li
          class="ecl-content-block__label-item"
        >
          <span
            class="ecl-label ecl-label--high"
          >
            high importance
          </span>
        </li>
      </ul>
      <ul
        class="ecl-content-block__primary-meta-container"
      >
        <li
          class="ecl-content-block__primary-meta-item"
        >
          PRIMARY META
        </li>
        <li
          class="ecl-content-block__primary-meta-item"
        >
          DD Month Year
        </li>
      </ul>
      <div
        class="ecl-content-block__title"
        data-ecl-title-link=""
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Title
        </a>
      </div>
      <div
        class="ecl-content-block__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
      </div>
      <ul
        class="ecl-content-block__secondary-meta-container"
      >
        <li
          class="ecl-content-block__secondary-meta-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-content-block__secondary-meta-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-content-block__secondary-meta-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-content-block__secondary-meta-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-content-block__secondary-meta-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-content-block__secondary-meta-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <div
        class="ecl-content-block__list-container"
      >
        <dl
          class="ecl-description-list ecl-content-block__list"
        >
          <dt
            class="ecl-description-list__term"
          >
            Standard text
          </dt>
          <dd
            class="ecl-description-list__definition"
          >
            Lorem ipsum dolor sit amet, 
            <a
              class="ecl-link"
              href="/example"
            >
              consectetur adipiscing elit
            </a>
            . Suspendisse ut sapien condimentum, aliquet turpis sit amet, finibus purus. Donec porttitor iaculis felis ut dapibus. Sed blandit, massa ac suscipit facilisis
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Standalone links
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--link"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--s ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#copy"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Lorem ipsum dolor sit amet
                  </span>
                </a>
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--s ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#download"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Lorem ipsum dolor sit amet
                  </span>
                </a>
              </li>
            </ul>
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Links inline
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--inline"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone"
                  href="/example"
                >
                  Lorem ipsum dolor sit amet
                </a>
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone"
                  href="/example"
                >
                  Lorem ipsum dolor sit amet
                </a>
              </li>
            </ul>
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Taxonomy list
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--taxonomy"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 1
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 2
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 3
              </li>
            </ul>
          </dd>
        </dl>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Content item Image renders correctly 1`] = `
<jest>
  <article
    class="ecl-content-item"
  >
    <picture
      class="ecl-content-item__picture ecl-picture ecl-content-item__picture--large ecl-content-item__picture--left"
      data-ecl-picture-link=""
    >
      <source
        media="(min-width: 480px)"
        srcset="https://inno-ecl.s3.amazonaws.com/media/examples/example-image2.jpg"
        type="image/jpg"
      />
      <img
        alt="Alt text of the image"
        class="ecl-content-item__image"
        src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
      />
    </picture>
    <div
      class="ecl-content-block ecl-content-item__content-block"
      data-ecl-auto-init="ContentBlock"
      data-ecl-content-block=""
    >
      <ul
        aria-label="Labels"
        class="ecl-content-block__label-container"
      >
        <li
          class="ecl-content-block__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight"
          >
            highlight
          </span>
        </li>
        <li
          class="ecl-content-block__label-item"
        >
          <span
            class="ecl-label ecl-label--high"
          >
            high importance
          </span>
        </li>
      </ul>
      <ul
        class="ecl-content-block__primary-meta-container"
      >
        <li
          class="ecl-content-block__primary-meta-item"
        >
          PRIMARY META
        </li>
        <li
          class="ecl-content-block__primary-meta-item"
        >
          DD Month Year
        </li>
      </ul>
      <div
        class="ecl-content-block__title"
        data-ecl-title-link=""
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Title
        </a>
      </div>
      <div
        class="ecl-content-block__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus gravida ipsum ut lorem cursus, quis tincidunt sem viverra. Nunc vestibulum, mauris quis porta venenatis, justo odio commodo tellus
      </div>
      <ul
        class="ecl-content-block__secondary-meta-container"
      >
        <li
          class="ecl-content-block__secondary-meta-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-content-block__secondary-meta-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-content-block__secondary-meta-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-content-block__secondary-meta-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-content-block__secondary-meta-icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-content-block__secondary-meta-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <div
        class="ecl-content-block__list-container"
      >
        <dl
          class="ecl-description-list ecl-content-block__list"
        >
          <dt
            class="ecl-description-list__term"
          >
            Standard text
          </dt>
          <dd
            class="ecl-description-list__definition"
          >
            Lorem ipsum dolor sit amet, 
            <a
              class="ecl-link"
              href="/example"
            >
              consectetur adipiscing elit
            </a>
            . Suspendisse ut sapien condimentum, aliquet turpis sit amet, finibus purus. Donec porttitor iaculis felis ut dapibus. Sed blandit, massa ac suscipit facilisis
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Standalone links
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--link"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--s ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#copy"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Lorem ipsum dolor sit amet
                  </span>
                </a>
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--s ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#download"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Lorem ipsum dolor sit amet
                  </span>
                </a>
              </li>
            </ul>
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Links inline
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--inline"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone"
                  href="/example"
                >
                  Lorem ipsum dolor sit amet
                </a>
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                <a
                  class="ecl-link ecl-link--standalone"
                  href="/example"
                >
                  Lorem ipsum dolor sit amet
                </a>
              </li>
            </ul>
          </dd>
          <dt
            class="ecl-description-list__term"
          >
            Taxonomy list
          </dt>
          <dd
            class="ecl-description-list__definition ecl-description-list__definition--taxonomy"
          >
            <ul
              class="ecl-description-list__definition-list"
            >
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 1
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 2
              </li>
              <li
                class="ecl-description-list__definition-item"
              >
                Taxonomy item 3
              </li>
            </ul>
          </dd>
        </dl>
      </div>
    </div>
  </article>
</jest>
`;
